Chapter 9 — Listing 9.12: TimeBugs.java Demonstrates: common date-time anti-patterns and their correct alternatives